--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "dependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.17",
+    "@iconify-json/simple-icons": "^1.2.24",
     "@nuxt/content": "^2.13.4",
     "@nuxt/fonts": "^0.10.3",
-    "@nuxt/image": "^1.8.1",
-    "@nuxt/ui-pro": "^1.6.0",
+    "@nuxt/image": "^1.9.0",
+    "@nuxt/ui-pro": "^1.7.0",
     "@nuxthub/core": "0.8.10",
-    "nuxt": "^3.15.0"
+    "nuxt": "3.14.1592"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.7.4",
-    "eslint": "^9.17.0",
+    "@nuxt/eslint": "^0.7.6",
+    "eslint": "^9.20.1",
     "nuxt-qrcode": "^0.4.1",
     "vue-tsc": "^2.2.0",
-    "wrangler": "^3.99.0"
+    "wrangler": "^3.108.1"
   },
   "resolutions": {
     "nuxt": "3.14.1592"
